# realworld-axum

./: .env.example  .gitignore  Cargo.toml  devenv.nix  docker-compose.yml
migrations/: 20260222092016_create_users_table.sql
posting/: get-current-user.posting.yaml  login.posting.yaml  register-user.posting.yaml
src/: main.rs  state.rs
src/auth/: jwt.rs  middleware.rs  password.rs
src/handlers/: auth.rs  health.rs
src/repositories/: user.rs
src/schemas/: mod.rs  user.rs
